# AndroidTest

./: build.gradle  settings.gradle
app/: MultiDex.txt  build.gradle  channel  robust.xml
app/robust/: mapping.txt  methodsMap.robust
app/src/androidTest/java/com/wesmarclothing/jniproject/: ExampleInstrumentedTest.kt  ExampleUnitTestTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Test.cpp  Test.h  native-lib.cpp
app/src/main/java/com/wesmarclothing/jniproject/: App.kt  AspectJTestActivity.kt  BlankFragment.kt  BlankViewModel.kt  CoroutineTest.kt  DelegateTest.kt  JinTest.kt  JniActivity.kt  MainActivity.kt  RxPermissionsUtils.kt  SimpleActivity.kt  SimpleSingle.kt  StringFormatTest.kt  TestJson.kt  onRequestPermissionsListener.kt
app/src/main/res/layout/: activity_applist.xml  activity_aspect_jtest.xml  activity_jni.xml  activity_kodein_di.xml  activity_login.xml  activity_main.xml  activity_opencv.xml  activity_proxy.xml  activity_record.xml  activity_simple.xml  activity_test.xml  blank_fragment.xml  fragment_item_list_dialog.xml  item.xml  item_appinfo.xml
app/src/main/res/raw/: plugin.apk
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
lib_plugin/: build.gradle
lib_plugin/src/main/: AndroidManifest.xml
lib_plugin/src/main/res/values/: strings.xml
lib_targetapk/: build.gradle
lib_targetapk/src/main/: AndroidManifest.xml
lib_targetapk/src/main/res/layout/: activity_test.xml  activity_test2.xml
lib_targetapk/src/main/res/values/: strings.xml
(+63 files in other folders)
